testdata/baselines/reference/submodule/conformance/parserComputedPropertyName34.errors.txt
error TS-1: Pre-emit (3) and post-emit (5) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
parserComputedPropertyName34.ts(3,5): error TS1164: Computed property names are not allowed in enums.
parserComputedPropertyName34.ts(3,11): error TS2304: Cannot find name 'id'.
parserComputedPropertyName34.ts(4,5): error TS1164: Computed property names are not allowed in enums.


!!! error TS-1: Pre-emit (3) and post-emit (5) diagnostic counts do not match! This can indicate that a semantic _error_ was added by the emit resolver - such an error may not be reflected on the command line or in the editor, but may be captured in a baseline here!
!!! related TS-1: The excess diagnostics are:
!!! related TS2552 parserComputedPropertyName34.ts:3:6: Cannot find name 'e'. Did you mean 'E'?
!!! related TS2304 parserComputedPropertyName34.ts:4:6: Cannot find name 'e2'.
==== parserComputedPropertyName34.ts (3 errors) ====
    enum E {
        // no ASI, comma expected
        [e] = id++,
        ~~~
!!! error TS1164: Computed property names are not allowed in enums.
              ~~
!!! error TS2304: Cannot find name 'id'.
        [e2] = 1
        ~~~~
!!! error TS1164: Computed property names are not allowed in enums.
    }